# fdu

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  clippy.toml
.claude/agents/: rust-architecture-designer.md
docs/: conversation-summary.md  termination-detection-discussion.md
src/: cli.rs  config.rs  utils.rs
src/core/: mod.rs  walker.rs  worker.rs
src/fdu/: main.rs
